--- a/BlazorApp/Components/Pages/Login.razor
+++ b/BlazorApp/Components/Pages/Login.razor
@@ -7,52 +7,52 @@
 <PageTitle>Iniciar sesión</PageTitle>
 
 <div class="container-fluid">
-    <div class="row mt-5">
-        <div class="col-md-4 offset-md-4 col-sm-8">
-            <div class="card" style="background-color:rgba(250,250,250,.9)">
-                <div class="card-body px-5 py-5">
-                    <h2 class="card-title text-primary text-center mb-2">Inicio de sesión</h2>
-                    <p class="text-body-secondary small text-center mb-5">Favor de ingresar usuario y contraseña</p>
-                    <EditForm method="post" Model="credentials" OnValidSubmit="AuthenticateUser" FormName="login" Enhance>
-                        <div class="row mb-4">
-                            @* <label for="username" class="col-sm-3 col-form-label">Usuario <span class="text-danger">*</span></label> *@
-                            <div class="col-sm-12">
-                                <InputText id="username" @bind-Value="credentials.Username" class="form-control credential" autocomplete="off" placeholder="Usuario" />
-                                <ValidationMessage For="() => credentials.Username" class="text-danger" />
+    <div class="mx-auto mt-5" style="width:400px; height:300px;">
+        <div class="card" style="background-color:rgba(250,250,250,.9)">
+            <div class="card-body px-5 py-5">
+                @* <h1 class="card-title text-primary text-center mb-2"><i class="bi bi-person-lock"></i></h1> *@
+                <p class="text-body-secondary small text-center mb-5">Favor de ingresar usuario y contraseña</p>
+                <EditForm method="post" Model="credentials" OnValidSubmit="AuthenticateUser" FormName="login" Enhance>
+                    <div class="row mb-4">
+                        <div class="col-12">
+                            <div class="input-group">
+                                <span class="input-group-text" id="inputGroup-sizing-sm"><i class="bi bi-person-fill"></i></span>
+                                <InputText id="username" @bind-Value="credentials.Username" class="form-control credential" autocomplete="off" placeholder="Usuario" aria-describedby="inputGroup-sizing-sm" />
+                            </div>
+                            <ValidationMessage For="() => credentials.Username" class="text-danger" />
+                        </div>
+                    </div>
+                    <div class="row mb-5">
+                        <div class="col-12">
+                            <div class="input-group">
+                                <span class="input-group-text" id="inputGroup-sizing-sm-pwd"><i class="bi bi-key-fill"></i></span>
+                                <InputText type="password" id="password" @bind-Value="credentials.Password" class="form-control credential" placeholder="Contraseña" aria-describedby="inputGroup-sizing-sm-pwd" />
+                            </div>
+                            <ValidationMessage For="() => credentials.Password" class="text-danger" />
+                        </div>
+                    </div>
+                    <div class="row mb-2">
+                        <div class="col-12">
+                            <div class="d-grid gap-2 mb-2">
+                                <button type="submit" class="btn btn-primary" disabled="@IsSubmitting">
+                                    Iniciar sesión<i class="bi bi-box-arrow-in-right"></i>
+                                    @if (IsLoading)
+                                    {
+                                        <span class="spinner-border spinner-border-sm mr-1"></span>
+                                    }
+                                </button>
                             </div>
                         </div>
-                        <div class="row mb-5">
-                            @* <label for="password" class="col-sm-3 col-form-label">Contraseña <span class="text-danger">*</span></label> *@
-                            <div class="col-sm-12">
-                                <InputText type="password" id="password" @bind-Value="credentials.Password" class="form-control credential" placeholder="Contraseña" />
-                                <ValidationMessage For="() => credentials.Password" class="text-danger" />
-                            </div>
-                        </div>
-                        <div class="row mb-2">
-                            @* <div class="col-sm-3"></div> *@
-                            <div class="col-sm-12">
-                                <div class="d-grid gap-2 mb-2">
-                                    <button type="submit" class="btn btn-primary" disabled="@IsSubmitting">
-                                        Ingresar
-                                        @if (IsLoading)
-                                        {
-                                            <span class="spinner-border spinner-border-sm mr-1"></span>
-                                        }
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                        <DataAnnotationsValidator />
-                    </EditForm>
-                    @if (!string.IsNullOrEmpty(error))
-                    {
-                        <div class="alert alert-danger mt-3 mb-0">@error</div>
-                    }
-                </div>
+                    </div>
+                    <DataAnnotationsValidator />
+                </EditForm>
+                @if (!string.IsNullOrEmpty(error))
+                {
+                    <div class="alert alert-danger mt-3 mb-0">@error</div>
+                }
             </div>
         </div>
     </div>
-
 </div>
 @code {
     [SupplyParameterFromForm]
@@ -84,7 +84,7 @@
 
             if (result != null)
             {
-                GlobalState.Token = result.Token;
+                //GlobalState.Token = result.Token;
                 GlobalState.Session = result;
                 navigation.NavigateTo("/home");
             }
