--- a/BlazorApp/Components/Pages/Users/Create.razor
+++ b/BlazorApp/Components/Pages/Users/Create.razor
@@ -132,13 +132,13 @@
                         </div>
                         <div class="col-12">
                             <div class="d-grid gap-2 d-md-block">
-                                <button type="reset" class="btn btn-primary" @onclick="ClearForm">Nuevo usuario</button>
+                                <button type="reset" class="btn btn-primary" @onclick="ClearForm">Nuevo<i class="bi bi-person-plus-fill"></i></button>
                                 <button type="submit" class="btn btn-primary" disabled="@IsSubmitting">
                                     @if (IsLoading)
                                     {
                                         <span class="spinner-border spinner-border-sm mr-1"></span>
                                     }
-                                    Guardar
+                                    Guardar<i class="bi bi-floppy2-fill"></i>
                                 </button>
                             </div>
                         </div>
@@ -199,7 +199,7 @@
         {
             this.IsLoading = true;
 
-            this.token = GlobalState.Token;
+            this.token = GlobalState.Session.Token;
             await LoadSelect();
         }
         catch (Exception ex)
