--- a/BlazorApp/Components/Pages/Users/Reset.razor
+++ b/BlazorApp/Components/Pages/Users/Reset.razor
@@ -50,7 +50,7 @@
                                     {
                                         <span class="spinner-border spinner-border-sm mr-1"></span>
                                     }
-                                    Guardar
+                                    Guardar<i class="bi bi-floppy2-fill"></i>
                                 </button>
                             </div>
                         </div>
@@ -112,7 +112,7 @@
             else
             {
                 this.IsLoading = true;
-                this.token = GlobalState.Token;
+                this.token = GlobalState.Session.Token;
 
                 var parameters = new Dictionary<string, string>();
                 parameters.Add("id", Id.ToString());
