--- a/BlazorApp/wwwroot/app.css
+++ b/BlazorApp/wwwroot/app.css
@@ -29,9 +29,15 @@ a, .btn-link {
 
 .btn-primary {
     color: #fff;
-    background-color: #1b6ec2;
-    border-color: #1861ac;
+    background-color: #1957b1;
+    border-color: #1b60c2;
 }
+
+    .btn-primary:hover {
+        color: #fff;
+        background-color: #0f356c;
+        border-color: #1b60c2;
+    }
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
   box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
