--- a/BlazorApp/Components/Pages/Users/Edit.razor
+++ b/BlazorApp/Components/Pages/Users/Edit.razor
@@ -61,7 +61,7 @@
                         <div class="col-md-4">
                             <label for="correoelectronico" class="form-label">Correo Electrónico <span class="text-danger">*</span></label>
                             <InputText id="correoelectronico" type="email" @bind-Value="user!.CorreoElectronico"
-                                       class="form-control" placeholder="email@example.com" aria-label="CorreoElectronico" disabled="@IsDisabled" />
+                                       class="form-control credential" placeholder="email@example.com" aria-label="CorreoElectronico" disabled="@IsDisabled" />
                             <ValidationMessage For="() => user!.CorreoElectronico" class="text-danger" />
                         </div>
                         <div class="col-md-4">
@@ -149,6 +149,7 @@
             }
         </div>
     </div>
+    <ConfirmDialog @ref="dialog" />
     @if (user != null)
     {
         <div class="alert alert-light" role="alert">
@@ -231,8 +232,7 @@
         if (IsSubmitting)
             return;
 
-        bool confirmed = await JS.InvokeAsync<bool>("confirm", "¿Deseas continuar?");
-        if (!confirmed)
+        if (!await ConfirmationAsync())
             return;
 
         try
@@ -307,4 +307,25 @@
         }
     }
 
+    private ConfirmDialog dialog = default!;
+
+    private async Task<bool> ConfirmationAsync()
+    {
+        var options = new ConfirmDialogOptions
+        {
+            AutoFocusYesButton = false,
+            Size = DialogSize.Small,
+            YesButtonText = "Aceptar",
+            YesButtonColor = ButtonColor.Primary,
+            NoButtonText = "Cancelar",
+            NoButtonColor = ButtonColor.Danger
+        };
+
+        var confirmation = await dialog.ShowAsync(
+            title: "Confirmación",
+            message1: "¿Deseas continuar?",
+            confirmDialogOptions: options);
+
+        return confirmation;
+    }
 }
