Se integra bootstrap-icon en local.

--- a/BlazorApp/Components/Layout/NavMenu.razor
+++ b/BlazorApp/Components/Layout/NavMenu.razor
@@ -15,7 +15,7 @@
         {
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                    <i class="bi bi-box-arrow-right"></i> Inicio de sesión
+                    <i class="bi bi-box-arrow-in-right"></i> Inicio de sesión
                 </NavLink>
             </div>
         }
@@ -23,22 +23,22 @@
         {
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="/home" Match="NavLinkMatch.All">
-                    <i class="bi bi-house-door-fill"></i> Inicio
+                    <Icon Name="IconName.HouseDoorFill" /> Inicio
                 </NavLink>
             </div>
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="/user/find">
-                    <i class="bi bi-search"></i> Consultar
+                    <Icon Name="IconName.Search" /> Consultar
                 </NavLink>
             </div>
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="/user/create">
-                    <i class="bi bi-person-fill"></i> Nuevo
+                    <Icon Name="IconName.PersonFill" /> Nuevo
                 </NavLink>
             </div>
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="/logout">
-                    <i class="bi bi-box-arrow-left"></i> Cerrar sesión
+                    <i class="bi bi-box-arrow-left"></i>Cerrar sesión
                 </NavLink>
             </div>
         }
