--- a/BlazorApp/Components/Pages/Users/Find.razor
+++ b/BlazorApp/Components/Pages/Users/Find.razor
@@ -14,7 +14,7 @@
             <div class="row g-3 mt-1">
                 <div class="col-sm-12 col-md-12">
                     <div class="input-group mb-3">
-                        <span class="input-group-text" id="inputGroup-sizing-sm">Buscar &nbsp;<i class="bi bi-search"></i></span>
+                        <span class="input-group-text" id="inputGroup-sizing-sm">Buscar <Icon Name="IconName.Search" /></span>
                         <input type="text" class="form-control" @bind="searchText" @bind:event="oninput" @bind:after="FindUsers" placeholder="Ingresar al menos 3 caracteres del nombre completo o cuenta de usuario" aria-label="Buscar usuario por nombre o cuenta" aria-describedby="inputGroup-sizing-sm">
                     </div>
                 </div>
