--- a/BlazorApp/Components/Pages/Users/Reset.razor
+++ b/BlazorApp/Components/Pages/Users/Reset.razor
@@ -52,7 +52,7 @@
                                     {
                                         <span class="spinner-border spinner-border-sm mr-1"></span>
                                     }
-                                    Guardar<i class="bi bi-floppy2-fill"></i>
+                                    Guardar<Icon Name="IconName.Floppy2Fill" />
                                 </Button>
                             </div>
                         </div>
