--- a/BlazorApp/Components/Pages/Users/Edit.razor
+++ b/BlazorApp/Components/Pages/Users/Edit.razor
@@ -125,13 +125,12 @@
                         </div>
                         <div class="col-12">
                             <div class="d-grid gap-2 d-md-block">
-                                @* <button type="button" class="btn btn-primary" @onclick="EnableForm" disabled="@(!IsSubmitting)">Editar</button> *@
                                 <button type="submit" class="btn btn-primary" disabled="@IsSubmitting">
                                     @if (IsLoading)
                                     {
                                         <span class="spinner-border spinner-border-sm mr-1"></span>
                                     }
-                                    Guardar<i class="bi bi-floppy2-fill"></i>
+                                    Guardar<Icon Name="IconName.Floppy2Fill" />
                                 </button>
                             </div>
                         </div>
