--- a/BlazorApp/Components/Layout/MainLayout.razor
+++ b/BlazorApp/Components/Layout/MainLayout.razor
@@ -8,6 +8,7 @@
 
     <main>
         <div class="top-row px-4" style="background-color:#0d2d5b;">
+            <span class="text-white small">Versión 1.0</span>
             @* @if (GlobalState.Session != null))
             {
                 <a href="/logout" class="link-danger">Cerrar sesión</a>
